
add_executable(test_engine test_engine.cpp)
add_executable(test_database test_database.cpp)
add_executable(create_test_contract create_test_contract.cpp)
add_executable(create_test_contract2 create_test_contract2.cpp)

add_executable(vm_engine_tests vm/engine_tests.cpp)

target_link_libraries(test_engine mmx_vm)
target_link_libraries(test_database mmx_modules)
target_link_libraries(create_test_contract mmx_vm)
target_link_libraries(create_test_contract2 mmx_vm)

target_link_libraries(vm_engine_tests mmx_vm)

