
add_executable(test_engine test_engine.cpp)
add_executable(test_mnemonic test_mnemonic.cpp)
add_executable(test_database test_database.cpp)
add_executable(test_compiler test_compiler.cpp)
add_executable(test_transactions test_transactions.cpp)
add_executable(test_swap_algo test_swap_algo.cpp)
add_executable(test_database_reads test_database_reads.cpp)
add_executable(test_mem_hash test_mem_hash.cpp)
add_executable(database_fill database_fill.cpp)

add_executable(mmx_tests mmx_tests.cpp)
add_executable(vm_engine_tests vm/engine_tests.cpp)

target_link_libraries(test_engine mmx_vm)
target_link_libraries(test_mnemonic mmx_iface)
target_link_libraries(test_database mmx_db mmx_iface)
target_link_libraries(test_compiler mmx_vm mmx_iface)
target_link_libraries(test_transactions mmx_modules)
target_link_libraries(test_swap_algo mmx_iface)
target_link_libraries(test_database_reads mmx_db mmx_iface)
target_link_libraries(database_fill mmx_db mmx_iface)
target_link_libraries(test_mem_hash vnx_base mmx_pos)

target_link_libraries(mmx_tests mmx_iface)
target_link_libraries(vm_engine_tests mmx_vm)

