
add_executable(test_engine test_engine.cpp)
add_executable(test_mnemonic test_mnemonic.cpp)
add_executable(test_database test_database.cpp)
add_executable(test_compiler test_compiler.cpp)
add_executable(test_transactions test_transactions.cpp)
add_executable(test_swap_algo test_swap_algo.cpp)
add_executable(test_database_reads test_database_reads.cpp)
add_executable(test_mem_hash test_mem_hash.cpp)
add_executable(test_pos_compute test_pos_compute.cpp)
add_executable(test_encoding test_encoding.cpp)
add_executable(test_score_target test_score_target.cpp)
add_executable(test_space_diff test_space_diff.cpp)
add_executable(test_execute vm/test_execute.cpp)
add_executable(database_fill database_fill.cpp)

add_executable(mmx_tests mmx_tests.cpp)
add_executable(vm_engine_tests vm/engine_tests.cpp)
add_executable(vm_storage_tests vm/storage_tests.cpp)

target_link_libraries(test_engine mmx_vm)
target_link_libraries(test_mnemonic mmx_iface)
target_link_libraries(test_database mmx_db mmx_iface)
target_link_libraries(test_compiler mmx_vm mmx_iface)
target_link_libraries(test_transactions mmx_modules)
target_link_libraries(test_swap_algo mmx_iface)
target_link_libraries(test_database_reads mmx_db mmx_iface)
target_link_libraries(database_fill mmx_db mmx_iface)
target_link_libraries(test_mem_hash vnx_base mmx_pos)
target_link_libraries(test_pos_compute mmx_iface mmx_pos)
target_link_libraries(test_space_diff mmx_iface mmx_pos)
target_link_libraries(test_encoding mmx_pos)
target_link_libraries(test_execute mmx_vm mmx_iface)

target_link_libraries(mmx_tests mmx_iface mmx_pos)
target_link_libraries(vm_engine_tests mmx_vm)
target_link_libraries(vm_storage_tests mmx_vm)

add_executable(test_write_bytes_vitest_gen test_write_bytes_vitest_gen.cpp)
add_executable(test_variant_gen_vitest test_variant_gen_vitest.cpp)

target_link_libraries(test_write_bytes_vitest_gen mmx_iface)
target_link_libraries(test_variant_gen_vitest mmx_iface)

if(CUDA_FOUND)
	add_executable(test_cuda_recompute test_cuda_recompute.cpp)
	target_link_libraries(test_cuda_recompute mmx_pos mmx_pos_cuda)
endif()
